2004-06-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied patch from bug #977354 for cosmetic fix to
	the About dialog. (by Joe Mistachkin).

	* tkchat.tcl: Removed a number of 8.4+isms so that tkchat operates
	with Tk8.3 again. Avoid eq and ne and use tk_windowingsystem.

2004-06-04  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Added message timestamps and a visibility for them
	option in the Visibility menu for them.
	* ChangeLog: Fixed a few 2004 entries incorrectly set to 2003

2004-05-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Updated babelfish web scraping for translate menu.

2004-05-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl (::tkchat::msgSend): convert msg to utf-8 if necessary

2004-05-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed bug #955473 erroneous winico requirement

2004-05-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added /wiki command for Colin (the lazybones).

2004-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:  Cleanup the taskbar icon on application exit.

2004-04-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Support 'tile' themeing now. There are a couple of
	places (font and color dialogs) that have compatability
	workarounds that might be removed in the future. Requires tile0.4+
	
	* tkchat.tcl: Provide activity indicators by editing the title
	when the window isn't focused and with winico support for windows.
	* tkchat.ico: Icons for use with windows.

2004-02-09  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Updated the way messages from ircbridge and ijchain
	are handled. The new code path rewrites the messages before the
	messages are is set to 'normal' so you can just call addAction and
	return. 

2004-03-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Add ijbridge as a synonym for ijchain to trap