@@ -1,3 +1,8 @@
+2004-06-29  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkchat.tcl (::tkchat::parseStr): add recognition of any 6-digit
+	sequence as a SF bug id, make it a URL that jumps to that bug.
+
 2004-06-23  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Applied patch from bug #977354 for cosmetic fix to
